# screenshotscribe

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
screenshotscribe/: generate_document.py  generate_text_gemini.py  main.py  output_document.py  output_markdown.py  utils.py
