[project]
name = "screenshotscribe"
version = "0.1.0"
description = ""
authors = [{ name = "Derek Lee", email = "22509961+yuandere@users.noreply.github.com" }]
requires-python = ">=3.12, <4"
readme = "README.md"
dependencies = [
    "google-generativeai>=0.8.3,<0.9",
    "python-dotenv>=1.0.1,<2",
    "python-docx>=1.1.2,<2",
    "tqdm>=4.66.5,<5",
]

[project.scripts]
screenshotscribe = "screenshotscribe.main:main"

[dependency-groups]
test = ["pytest>=8.3.3,<9"]

[tool.uv]
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

